[package]
name = "rundo"
version = "0.4.0"
authors = ["Adoo <Adoo@outlook.com>"]
description = "Rundo is a redo / undo library for rust which can auto generate undo op. Below is an example to use Rundo."
documentation = "https://docs.rs/rundo"
homepage = "https://github.com/M-Adoo/rundo"
repository = "https://github.com/M-Adoo/rundo"
readme = "readme.md"
keywords = ["undo", "redo"]
categories = ["Data structures", "Data control"]
license = "MIT"

[badges]
travis-ci = { repository = "M-Adoo/rundo", branch = "master" }


[dependencies]
rundo_attrs = { path="./macros/attrs",  version="^0.4" }
rundo_types = { path="types",  version="^0.4"}
bson = "0.11"

[workspace]